# vml

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.adoc  README.md  generator.cpp  launch.vs.json  main.cpp  static_for.h  testing.cpp  v_base.h  v_func.h  v_oper.h  vector.h
debugging_tests/vulkan/: build.bat  core.cpp  graphics_context.cpp  graphics_context.hpp
swizzle/: matrix.h  vector.h  vector_base.h
swizzle/detail/: binary_ops.h  functions.h  static_for.h  swizzler.h  unary_ops.h  util.h
test/: c4droid.h  test_advanced.cpp  test_shaders.cpp  test_simple.cpp
test/SDL2_app/: Makefile  SDL2_app.cpp  SDL2_app.h
test/SDL_app/: .c4droid  Makefile  README.txt  SDL_app.cpp  SDL_app.h
test/SDL_app/ThreadPool/: Doxyfile  Makefile  Makefile.template  README.md
test/SDL_app/ThreadPool/doc/: implementation.md
test/SDL_app/ThreadPool/examples/: Makefile  make_function_input_range_container.cpp  make_function_input_range_for_loop.cpp  make_function_input_range_transform.cpp  make_function_output_iterator.cpp  parallel_for_each_integral.cpp  parallel_for_each_iterator.cpp  parallel_for_each_vector.cpp  parallel_transform_integral.cpp  parallel_transform_iterator.cpp  parallel_transform_vector.cpp  threadpool_for_each.cpp  threadpool_helloworld.cpp  threadpool_helloworld_future.cpp  threadpool_pass_by_value.cpp
test/SDL_app/ThreadPool/include/threadpool/: make_iterator.h  parallel_for_each.h  parallel_transform.h  threadpool.h  threadpool_config.h
test/SDL_app/ThreadPool/include/threadpool/impl/: threadpool_generic.h  threadpool_generic_impl.h  threadpool_generic_inst.h  threadpool_impl.h  threadpool_impl_homogenous.h  threadpool_impl_util.h  threadpool_inst.h  threadpool_interface_generic.h  threadpool_interface_virtual.h
test/SDL_app/ThreadPool/include/threadpool/singlethreaded/: parallel_for_each.h  parallel_transform.h  threadpool.h
test/SDL_app/ThreadPool/lib/: Makefile  threadpool.cpp  threadpool_generic.cpp
test/SDL_app/ThreadPool/test/: Makefile  threadpool_test.cpp
test/SDL_app/ThreadPool/test/compile-tests/: Makefile
test/SDL_app/ThreadPool/test/compile-tests/testcases/: ThreadPool_comp.cpp
test/shader/: sandbox.h
test/shader/ref/: anisotropic.h  default.h  fps.h  primitives.h  umbrellar.h
test/vulkan_app/: build.bat  core.cpp  frame_capture.cpp  frame_capture.hpp  graphics_context.cpp  graphics_context.hpp  window.cpp  window.hpp
test/vulkan_app/shaders/: build.bat  deferred_lighting.frag  deferred_lighting.frag.hpp  deferred_lighting.vert  lp_no_tex_cube.frag  lp_no_tex_cube.geom  lp_no_tex_cube.vert
test/vulkan_app/shaders/SPV/: deferred_lighting.frag.spv  deferred_lighting.vert.spv  lp_no_tex_cube.frag.spv  lp_no_tex_cube.geom.spv  lp_no_tex_cube.vert.spv
vml/: matrix.h  vector.h  vector_base.h  vector_functions.h
vml/detail/: binary_ops.h  functions.h  swizzler.h  traits.h  unary_ops.h  util.h  vector_base.h
vml/uniform/: opengl.hpp  uniform.hpp  vulkan.hpp
